Trying to fix navbar on iphones

--- a/flowers_ecommerce/static/css/responsive.css
+++ b/flowers_ecommerce/static/css/responsive.css
@@ -1,14 +1,14 @@
 @media screen and (max-width: 1000px) {
 
     nav {
-        width: 700px;
+        width: 1000px;
         margin: auto;
         font-size: 1.2rem;
         padding: 0;
     }
 
     nav ul li a{
-        padding: 20px 30px;
+        padding: 20px 25px;
     }
 
     #home .column-2 {
